src/objects/iaso__GBL_Rest_Services_Url__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>iaso__Blocked_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iaso__Cache_Partition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cache Partition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iaso__Enable_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iaso__Timeout__c</fullName>
        <description>The service timeout in milliseconds</description>
        <label>Timeout</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iaso__Url__c</fullName>
        <description>Url of the Rest service</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>iaso__cacheTTLInSecs__c</fullName>
        <description>The Time To Live of a record in the cache expressed in Seconds</description>
        <label>cacheTTLInSecs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iaso__isCacheInOrg__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isCacheInOrg</label>
        <type>Checkbox</type>
    </fields>
    <label>Rest Services Url</label>
</CustomObject>